# sps_genai

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  train_cifar10.py  train_cifar10_diffusion.py  train_cifar10_energy.py  train_mnist_gan.py
assignment4_outputs/: gradient_exercises_output.txt
checkpoints/: cifar10_energy.pth  cnn_cifar10.pth  mnist_gan_generator.pth
helper_lib/: data_loader.py  diffusion_model.py  energy_model.py  evaluator.py  gan_generator.py  gan_model.py  model.py  trainer.py
