[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "en-core-web-lg",
    "fastapi>=0.136.3",
    "pillow>=12.2.0",
    "spacy>=3.8.14",
    "torch==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "tqdm>=4.68.1",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
